# learnvideo

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/libs/: util-release.aar
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_audio_capture.xml  activity_camera_capture.xml  activity_e_g_l_sample01_triangle.xml  activity_e_g_l_sample02_camera.xml  activity_ffinfo.xml  activity_gl_sample02_image.xml  activity_gl_sample03_camera.xml  activity_main.xml  activity_render_image.xml  activity_video_capture.xml  main_func_item.xml  main_head_item.xml
app/src/main/res/values/: strings.xml  themes.xml
extra_libs/: util-release.aar
extra_libs/x264/arm64-v8a/lib/pkgconfig/: x264.pc
extra_libs/x264/armeabi-v7a/lib/pkgconfig/: x264.pc
glrenderer/src/main/: AndroidManifest.xml
glrenderer/src/main/cpp/librenderer/: EGLController.cpp  PngPreviewController.cpp  (+4 more)
glrendererpng/: build.gradle
glrendererpng/src/main/cpp/: CMakeLists.txt
glrendererpng/src/main/cpp/include/: liblog.h
glrendererpng/src/main/cpp/librenderer/: EGLController.h  PngPreviewController.cpp  PngPreviewController.h  PngPreviewRenderer.cpp  PngPreviewTexture.h  image.c  png_decoder.cpp  png_decoder.h
glrendererpng/src/main/cpp/src/: image-preview.cpp  native-lib.cpp  native-lib.h
glrendererpng/src/main/cpp/src/texture/: texture_triangle.cpp  texture_triangle.h
gltexture/: build.gradle
gltexture/src/main/cpp/: CMakeLists.txt
gltexture/src/main/cpp/include/: libjni.h
gltexture/src/main/cpp/src/: native-lib.cpp  native-lib.h
gltexture/src/main/cpp/src/texture/: TextureBase.h  texture_nv21.cpp  texture_nv21.h  texture_triangle.cpp  texture_triangle.h
gltexture/src/main/cpp/src/util/: ShaderUtil.cpp  ShaderUtil.h
gradle/wrapper/: gradle-wrapper.properties
learnaudio/: build.gradle
learnaudio/src/main/: AndroidManifest.xml
learnaudio/src/main/cpp/: CMakeLists.txt  native-lib.cpp
libpng/: build.gradle
libpng/src/main/: AndroidManifest.xml
libpng/src/main/cpp/: CMakeLists.txt
newffmpeg/: build.gradle
newffmpeg/src/main/: AndroidManifest.xml
newffmpeg/src/main/cpp/: CmakeLists.txt
x264_codec/: CMakeLists.txt  build.gradle
x264_codec/src/main/: AndroidManifest.xml
x264_codec/src/main/cpp/: X264Native.cpp  x264_encoder.cpp  x264_encoder.h
(+152 files in other folders)
